# Micro

./: .env.example  README.md  pyproject.toml
.claude/: settings.json
benchmarks/: coding_tasks.json  generate_report.py  performance_tasks.json  run_perf.py
benchmarks/results/main-resume-repro-2026-06-07/: DATA_PROVENANCE.md
micro/: __init__.py  approval_store.py  checkpoint.py  cli.py  config.py  context_manager.py  doom_loop.py  plan_mode.py  prompt_prefix.py  run_store.py  runtime.py  session_store.py  task_state.py  tool_context.py  workspace.py
micro/evaluation/: __init__.py  evaluator.py  metrics.py
micro/features/: __init__.py  memory.py
micro/providers/: __init__.py  clients.py
pico/: agent_loop.py  cli.py  doom_loop.py  plan_mode.py  reminders.py  runtime.py  security.py  tool_executor.py  tools.py  workspace.py
pico/evaluation/: metrics.py
pico/features/: readme_benchmark.md
pico/providers/: clients.py
tests/: test_agent_loop.py  test_allowed_tools.py  test_checkpoint.py  test_context_manager.py  test_evaluator.py  test_memory.py  test_metrics.py  test_micro.py  test_pico.py  test_prompt_prefix.py  test_public_api_contract.py  test_run_store.py  test_safety_invariants.py  test_security.py  test_session_store.py  test_task_state.py  test_tool_executor.py  test_tools.py
