[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micro"
version = "1.0.0"
description = "轻量终端 AI 编码助手，支持多模型协作（Thinking/Critique/Planner）"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
micro = "micro.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["micro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
